--- a/HomePage1/Home.html
+++ b/HomePage1/Home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>何佳豪 HomePage</title>
+    <title>好学长 HomePage</title>
     <meta charset="utf-8" />
     <link href="imgs/hjh.jpg" rel="icon"/>
     <link href="StyleSheet.css" rel="stylesheet" />
